--- a/index.html
+++ b/index.html
@@ -7,5 +7,13 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <ul>
+        <li>
+            <a href="./recipes/macaroni-and-cheese.html" target="_blank">
+                Macaroni and Cheese
+            </a>
+        </li>
+    </ul>
+    
 </body>
 </html>
