Add Basmati Rice recipe

--- a/recipes/basmati-rice.html
+++ b/recipes/basmati-rice.html
@@ -1,11 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Basmati Rice</title>
 </head>
+
 <body>
     <h1>Basmati Rice</h1>
+    <img src="../images/basmati-rice.png" alt="Basmati rice cooked in a pan" height="400">
+
+    <h2>Description</h2>
+    <p>
+        Savory Indian rice flavored with toasted and fragrant whole spices and fried onions. Soaking the basmati rice
+        before cooking makes all the difference. Serve with your favorite Indian curry or dal. Make sure you warn people
+        not to bite into the whole spices!
+    </p>
+
+    <h2>Ingredients</h2>
+    <ul>
+        <li>1 ½ cups basmati rice</li>
+        <li>2 tablespoons vegetable oil</li>
+        <li>1 (2 inch) piece cinnamon stick</li>
+        <li>2 pods green cardamom</li>
+        <li>2 whole cloves</li>
+        <li>1 tablespoon cumin seed</li>
+        <li>1 small onion, thinly sliced</li>
+        <li>2 ½ cups water</li>
+        <li>1 teaspoon salt, or to taste</li>
+    </ul>
+
+    <h2>Steps</h2>
+    <ol>
+        <li>Gather all ingredients.</li>
+        <li>Place rice into a bowl with enough water to cover. Set aside to soak for 20 minutes.</li>
+        <li>In the last 10 minutes of soaking, heat oil in a large pot or saucepan over medium heat. Add cinnamon stick, cardamom pods, and cloves, then stir in cumin seed.</li>
+        <li>Cook and stir until fragrant and toasted, about a minute. Add sliced onion and stir.</li>
+        <li>Sauté until the onion is tender and a rich golden brown color, about 10 minutes.</li>
+        <li>Drain water from rice, and stir into the pot. Cook and stir rice until lightly toasted, about 3 minutes.</li>
+        <li>Add water and salt, and bring to a boil. Cover and reduce heat to low. Simmer until all the water has been absorbed, about 15 minutes.</li>
+        <li>Let stand for 5 minutes, then fluff with a fork before serving.</li>
+    </ol>
+
 </body>
+
 </html>
