--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
                 Macaroni and Cheese
             </a>
         </li>
+        <li>
+            <a href="./recipes/basmati-rice.html" target="_blank">Basmati Rice</a>
+        </li>
     </ul>
     
 </body>
