Add Fruit Dip Recipe

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         <li>
             <a href="./recipes/basmati-rice.html" target="_blank">Basmati Rice</a>
         </li>
+        <li>
+            <a href="./recipes/fruit-dip.html">Fruit Dip</a>
+        </li>
     </ul>
     
 </body>
