--- a/recipes/basmati-rice.html
+++ b/recipes/basmati-rice.html
@@ -35,11 +35,14 @@
     <ol>
         <li>Gather all ingredients.</li>
         <li>Place rice into a bowl with enough water to cover. Set aside to soak for 20 minutes.</li>
-        <li>In the last 10 minutes of soaking, heat oil in a large pot or saucepan over medium heat. Add cinnamon stick, cardamom pods, and cloves, then stir in cumin seed.</li>
+        <li>In the last 10 minutes of soaking, heat oil in a large pot or saucepan over medium heat. Add cinnamon stick,
+            cardamom pods, and cloves, then stir in cumin seed.</li>
         <li>Cook and stir until fragrant and toasted, about a minute. Add sliced onion and stir.</li>
         <li>Sauté until the onion is tender and a rich golden brown color, about 10 minutes.</li>
-        <li>Drain water from rice, and stir into the pot. Cook and stir rice until lightly toasted, about 3 minutes.</li>
-        <li>Add water and salt, and bring to a boil. Cover and reduce heat to low. Simmer until all the water has been absorbed, about 15 minutes.</li>
+        <li>Drain water from rice, and stir into the pot. Cook and stir rice until lightly toasted, about 3 minutes.
+        </li>
+        <li>Add water and salt, and bring to a boil. Cover and reduce heat to low. Simmer until all the water has been
+            absorbed, about 15 minutes.</li>
         <li>Let stand for 5 minutes, then fluff with a fork before serving.</li>
     </ol>
 
