--- a/recipes/fruit-dip.html
+++ b/recipes/fruit-dip.html
@@ -1,11 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fruit Dip</title>
 </head>
+
 <body>
     <h1>Fruit Dip</h1>
+    <img src="../images/fruit-dip.png" alt="Fruit dip in a cup placed between fruits" height="400">
+
+    <h2>Description</h2>
+    <p>This fruit dip is really light and fluffy. Great to serve with your favorite fruit at parties, holidays, or any
+        time!</p>
+
+    <h2>Ingredients</h2>
+    <ul>
+        <li>1 pack of cream cheese, softened</li>
+        <li>1 jar marshmallow creme</li>
+    </ul>
+
+    <h2>Steps</h2>
+    <ol>
+        <li>Gather cream cheese and marshmallow creme.</li>
+        <li>Place cream cheese and creme in a medium bowl</li>
+        <li>Blend cream cheese and marshmallow creme with an electric mixer until smooth and well combined.</li>
+        <li>Serve with fruit and enjoy!</li>
+    </ol>
+
 </body>
+
 </html>
