Set fruit dip target attribute to _blank

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <a href="./recipes/basmati-rice.html" target="_blank">Basmati Rice</a>
         </li>
         <li>
-            <a href="./recipes/fruit-dip.html">Fruit Dip</a>
+            <a href="./recipes/fruit-dip.html" target="_blank">Fruit Dip</a>
         </li>
     </ul>
     
