Style the homepage

--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
-<body>
+<body id="homepage">
     <h1>Odin Recipes</h1>
-    <ul>
+    <ul class="recipe-list">
         <li>
             <a href="./recipes/macaroni-and-cheese.html" target="_blank">
                 Macaroni and Cheese
