Style the recipe pages

--- a/recipes/fruit-dip.html
+++ b/recipes/fruit-dip.html
@@ -5,9 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fruit Dip</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 
-<body>
+<body class="recipe">
     <h1>Fruit Dip</h1>
     <img src="../images/fruit-dip.png" alt="Fruit dip in a cup placed between fruits" height="400">
 
