--- a/recipes/macaroni-and-cheese.html
+++ b/recipes/macaroni-and-cheese.html
@@ -5,9 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Macaroni and Cheese</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 
-<body>
+<body class="recipe">
     <h1>Macaroni and Cheese</h1>
     <img src="./../images/macaroni-and-cheese.png" alt="Yummy Macaroni and Cheese served in a bowl" height="400">
     <h2>Description</h2>
