--- a/recipes/basmati-rice.html
+++ b/recipes/basmati-rice.html
@@ -5,9 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Basmati Rice</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 
-<body>
+<body class="recipe">
     <h1>Basmati Rice</h1>
     <img src="../images/basmati-rice.png" alt="Basmati rice cooked in a pan" height="400">
 
